Close button test

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,17 @@
   </head>
   <body>
     <div class="wrap">
+      <!-- Close / Back to Spixi -->
+      <button
+        id="spixi-close"
+        aria-label="Close mini app"
+        title="Close"
+        class="close-btn"
+        type="button"
+      >
+        ✕
+      </button>
+
       <div class="calc" role="application" aria-label="Retro pocket calculator">
         <i class="screw"></i><i class="screw"></i><i class="screw"></i
         ><i class="screw"></i>
