--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
         title="Close"
         class="close-btn"
         type="button"
+        onclick="SpixiAppSdk.back();"
       >
         ✕
       </button>
@@ -80,5 +81,7 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/spixi-app-sdk.js"></script>
+    <!-- Include the Spixi SDK -->
   </body>
 </html>
